--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,12 @@ body {
     background-color: #e0c9ef;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    align-items: center;
+    
     height: 7rem;
     margin: auto;
     color: #300a69;
+    padding: 0 80px 0 80px;
 }
 
 hr {
@@ -18,17 +20,11 @@ hr {
 
 .lado-esquerdo {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 20%;
     font-family: 'Times New Roman', Times, serif;
-    margin-left: 50px;
 }
 
 .lado-direito {
-    display: flex;
-    align-items: center;
-    width: 20%;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -46,7 +42,7 @@ a {
     justify-content: right;
     align-items: flex-end;
     margin: auto;
-    padding-right: 0.5rem;
+    padding: 10px 80px;
 }
 
 ul {
@@ -175,8 +171,10 @@ li {
     margin: auto;
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
+    max-width: 600px;
     gap:20px;
+    /* margin: 20px; */
      margin-top:50px;
      border: 2px solid #300a69;
      padding-top: 3rem;
@@ -256,11 +254,6 @@ margin-bottom: 20px;
     }
 
     .lado-esquerdo {
-        display: flex;
-        justify-content: center;
-         align-items: center;
-        width: 60%;
-        font-family: 'Times New Roman', Times, serif;
         font-size: 14px;
     }
 
@@ -281,14 +274,11 @@ margin-bottom: 20px;
 
 @media (max-width: 500px) {
     .container-topo {
-        /* background-color: #e0c9ef; */
-        display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 100%;
-        height: 7rem;
-        margin: auto;
-       /*  color: #300a69; */
+        min-height: 7rem;
+        padding: 0;
+        padding-bottom: 10px;
     }
 
     .display {
@@ -303,7 +293,8 @@ margin-bottom: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 60%;
+        width: 100%;
+        margin-left: 0;
         font-family: 'Times New Roman', Times, serif;
         font-size: 15px;
     }
@@ -340,6 +331,20 @@ margin-bottom: 20px;
         text-align: center;
         margin:auto;
         margin-bottom: 20px;
+        padding: 0 20px ;
+    }
+
+    /* .newsletter{
+        padding: 0 20px;
+    } */
+
+    .newsletter form{
+    width: 88%;
+    margin: 20px;
+    }
+
+    .icones{
+        padding-right: 20px;
     }
 
 }
