--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ li {
     text-align: center;
     color: #300a69;
     font-family: 'Times New Roman', Times, serif;
+    margin:20px;
 }
 
 .subtitulo {
@@ -61,7 +62,6 @@ li {
     text-align: center;
     color: #300a69;
     font-family: 'Times New Roman', Times, serif;
-    text-align: center;
 }
 
 .secao {
@@ -82,6 +82,7 @@ hr {
     margin: 5% 5% 5% 5%;
     border-radius: 10%;
     flex-wrap: wrap;
+    gap:30px;
 }
 
 .card {
@@ -131,8 +132,6 @@ a {
 
 .foto-perfil {
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-     color: #300a69;
 }
 
 .foto-perfil img {
@@ -152,6 +151,7 @@ a {
 
 .texto-descricao{
     text-align: center;
+    color: #300a69;
     margin:10px 240px 60px 240px;
 }
 
@@ -215,7 +215,7 @@ html {
 }
 
 .font-size{
-    font-size: 11px;
+    font-size: 12px;
 }
 
 .container-rodape {
@@ -243,8 +243,7 @@ html {
 @media (max-width: 800px) {
     
     .display {
-        display:flex;
-        justify-content: space-evenly;
+        align-content: space-around;
         margin: 5% 5% 5% 5%;
         flex-direction: column;
         gap:20px
@@ -264,8 +263,7 @@ html {
 
     .texto-descricao{
         text-align: center;
-        margin:auto;
-        margin-bottom: 20px;
+        margin:10px 120px 60px 120px;
     }
 }
 
@@ -287,12 +285,12 @@ html {
     }
 
     .lado-esquerdo {
-        display: flex;
+        /* display: flex; */
         justify-content: center;
-        align-items: center;
+       /*  align-items: center; */
         width: 100%;
         margin-left: 0;
-        font-family: 'Times New Roman', Times, serif;
+        /* //font-family: 'Times New Roman', Times, serif; */
         font-size: 15px;
     }
 
@@ -319,9 +317,6 @@ html {
     .secao {
         display: flex;
         justify-content: center;
-        color: #300a69;
-        font-family: 'Times New Roman', Times, serif;
-        margin: 0;
     }
 
     .texto-descricao{
@@ -331,6 +326,9 @@ html {
         padding: 0 20px ;
     }
 
+    .subtitulo{
+        margin:10px 60px 50px 60px;
+    }
     .newsletter form{
     width: 88%;
     margin: 20px;
